# Metaprompt

./: .gitignore  README.md  apply.py  batch_prompt.py  prompt_cycle.py  pyproject.toml  requirements.txt  resume.py  setup.py
core/: core_example.py
metaprompt/: utils.py
src/: utils.py
test/: test_prompt_cycle.py
utils/: editshelf.py
