[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaprompt"
version = "0.1.0"
description = "A place to hold my metaprompting codes."
readme = "README.md"
authors = [{ name = "Ryan Young", email = "github@ryanyoung.io" }]
license = { text = "MIT" }
requires-python = ">=3.6"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = ["google-generativeai", "rich", "tqdm", "ipython", "pandas"]

[project.urls]
Homepage = "https://github.com/synapticsage/metaprompt"
Documentation = "https://github.com/synapticsage/metaprompt#readme"

[tool.setuptools.packages.find]
where = ["metaprompt"]
